--- a/Test Task/Quiz/index.html
+++ b/Test Task/Quiz/index.html
@@ -10,12 +10,12 @@
 
  <body>
     <div class="quiz-wrapper">
-        <div class="quetion-count">
+        <div id="question-count">
             <h1>Question ...</h1>
         </div>
         <div class="quiz">
             <h2 id="question">Question goes here</h2> 
-            <div class="answer-wrapper" id="answer-buttons">
+            <div  id="answer-buttons">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
