--- a/Test Task/Quiz/index.html
+++ b/Test Task/Quiz/index.html
@@ -21,7 +21,7 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
-            <button id="next-button" disabled>Next Question</button>
+            <button id="next-button" >Next Question</button>
         
         </div>
        
