--- a/Test Task/Quiz/index.html
+++ b/Test Task/Quiz/index.html
@@ -15,12 +15,9 @@
         </div>
         <div class="quiz">
             <h2 id="question">Question goes here</h2> 
-            <div  id="answer-buttons">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
-            </div>
+            <div id="answer-info"></div>
+            <div  id="answer-buttons"></div>
+            <button id="check-button" >Check Answers</button>
             <button id="next-button" >Next Question</button>
         
         </div>
