refactor: light/dark theme toggle button

--- a/Test Task/Quiz/index.html
+++ b/Test Task/Quiz/index.html
@@ -7,7 +7,9 @@
   <link rel = "stylesheet" href="style.css">
  </head>
  <body>
-    <button id="theme-toggle">Dark Theme</button>
+    <div id="theme-toggle">
+        <div class="circle"></div>
+    </div>
     <div class="quiz-wrapper">
         <div id="question-count">
             <h1>Question ...</h1>
